# SocialHockey

./: .dockerignore  .env.example  Dockerfile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 94d6a47a43a7_initial.py
app/: cli.py  config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  auth_token.py  game.py  pending_registration.py  reservation.py  session.py  user.py
app/routes/: admin.py  auth.py  export.py  games.py  reservations.py
app/services/: auth_service.py  export_service.py  game_service.py  reservation_service.py  user_service.py
app/static/css/: styles.css
app/static/js/: clipboard.js  team-sortable.js
app/templates/: base.html
app/templates/components/: admin_action_response.html  admin_roster.html  backup_list.html  export_panel.html  footer.html  game_card.html  game_lists.html  nav.html  player_list.html  player_search_results.html  reservation_button.html  team_lists.html  user_row.html
app/templates/layouts/: app.html  public.html
app/templates/pages/: home.html
app/templates/pages/admin/: dashboard.html  game_manage.html  game_new.html  users.html
app/templates/pages/auth/: check_email.html  login.html  register.html
app/templates/pages/games/: detail.html  list.html
