[project]
name = "socialhockey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "resend>=2.23.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.41.0",
]
